Forward declare ShellClient for MojoApplicationInfo

This avoids pulling in generated headers indirectly
through content_browser_client.h, which can be problematic
because gyp makes it hard to reason about how these
dependencies are propagated.

BUG=612689
R=amistry@chromium.org
TBR=jam@chromium.org

Review-Url: https://codereview.chromium.org/1990793002
Cr-Commit-Position: refs/heads/master@{#394359}

Former-commit-id: bf869a0ff45baa0b1f973ab6dd5befcd5dd2f518